--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,20 @@
       "src": "/(.*)",
       "dest": "backend/main.py"
     }
-  ]
+  ],
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/dist/index.html"
+    }
+  ]  
 }
+
+  
+
