--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,10 @@
   "name": "file-sharing-frontend",
   "private": true,
   "version": "1.0.0",
-  "scripts": {
-  "dev": "vite",
-  "build": "npx vite build",
-  "preview": "npx vite preview"
+   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
 },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
@@ -19,5 +19,7 @@
     "lucide-react": "^0.543.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
-  }
+  },
+  "vercel-build": "npm run build",
+  "outputDirectory": "dist"
 }
